verif/test/deca/syntax/invalid/invalid-float3-verif.res
src/test/deca/syntax/invalid/invalid-float3.deca:2:18: mismatched input '3' expecting IDENT
